--- a/systemguile/registration/registration_style.css
+++ b/systemguile/registration/registration_style.css
@@ -43,7 +43,7 @@ body {
 .container form{
 
     position:relative;
-    min-height:250px;
+    min-height:300px;
     background-color: #fff;
      
 }
@@ -104,5 +104,7 @@ select {
 
     height:40px;
     background-color: mediumseagreen;
+    padding:10px;
+    width: 150px;
     
 }
