added connection between pages and sql. Adjusted the table (sorry for not pushing yesterday)

--- a/systemguile/Login/login_style.css
+++ b/systemguile/Login/login_style.css
@@ -1,6 +1,6 @@
 body {
 
-    background-image: url('inventory.jpg');
+    background-image: url('inventoryimg.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
